--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </header>
 
   <main class="container-custom">
-    <a href="UBL-POS.apk" class="install-btn" download>Install UBL POS App</a>
+    <a href="UBL-POS.apk" class="install-btn" download>Install UBL App</a>
   </main>
 
   <footer>
