--- a/appi.html
+++ b/appi.html
@@ -34,7 +34,7 @@
 
   <script>
      const owner = 'my-abl-app';   // ← change this
-        const repo = 'ubl-rehamn';           // ← replace with your repository name
+        const repo = 'ubl-asg';           // ← replace with your repository name
 
     async function getLatestAPK() {
       const status = document.getElementById('status');
